<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MentalMaths</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_top_score">Top Score</string>
    <string name="multiplicand">Multiplicand</string>
    <string name="multiplier">Multiplier</string>
    <string name="spree_count">Your current spree is at: </string>
    <string name="five_spree">SOLVING SPREE!</string>
    <string name="ten_spree">RAMPAGE!</string>
    <string name="fiften_spree">DOMINATING!</string>
    <string name="twenty_spree">UNSTOPPABLE</string>
    <string name="twenty_five_spree">GODLIKE!</string>
    <string name="top_spree">Your last spree ended at: </string>
    <string name="top_scores">Top Scores</string>
    <string name="save_score">Save Score?</string>
    <string name="Save">Save</string>
    <string name="Cancel">Cancel</string>
    <string name="reset">Reset</string>
    <string name="yes"> Yes </string>
    <string name="no"> No </string>
    <string name="action_add">Addition</string>
    <string name="action_multipliy">Multiplication</string>
    <string name="action_subtract">Subtraction</string>
    <string name="action_division">Division</string>

</resources>
